data/derived/fa15/progs/unify/prog2487.ml.out
Characters 116-123:
  | x::x'::x'' -> [(x*i)/10]@[((x*i) mod 10) + x']@ mulByDigit i [x'::x''];;
                                                                  ^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
